Fixed some margin sizing in the header around the login and spin button, became too large when page was really wide.

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,5 +1,5 @@
 .Login {
-  margin: 5% 0%;
+  margin: 2vh 0%;
   text-align: center;
 }
 .LoginForm {
