--- a/frontend/src/components/SpinButton/SpinButton.css
+++ b/frontend/src/components/SpinButton/SpinButton.css
@@ -1,5 +1,5 @@
 .SpinButtonContainer {
-  margin: 5% 0%;
+  margin: 1vh 0%;
   text-align: center;
 }
 
